--- a/smoke.css
+++ b/smoke.css
@@ -22,7 +22,7 @@ h1{
     text-transform: uppercase;
     color: #f5f5f5;
     font-size: 5em;
-    font-family: sans-serif;
+    font-family: Cursive;
 }
 
 h1 span{
